--- a/The_GISt.html
+++ b/The_GISt.html
@@ -40,7 +40,7 @@
                 </table>
                 <table align="left" width="68%" cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff" class="deviceWidth">
                   <tr>
-                    <td style="font-size: 13px; color: #959595; font-weight: normal; text-align: left; line-height: 24px; vertical-align: top; padding:20px 0 0 15px; background-color: #ffffff;">
+                    <td style="vertical-align: top; padding:20px 0 0 15px; background-color: #ffffff;">
                       <table cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff">
                         <tr>
                           <td valign="middle" style="padding:0 10px 0 20px; text-decoration: none; font-size: 36px; font-weight: bold; color: navy; font-family: Verdana, Arial, sans-serif;">The GISt</td>
