colors updated to match comp

--- a/The_GISt.html
+++ b/The_GISt.html
@@ -43,10 +43,10 @@
                     <td style="vertical-align: top; padding:20px 0 0 15px; background-color: #ffffff;">
                       <table cellpadding="0" cellspacing="0" border="0" bgcolor="#ffffff">
                         <tr>
-                          <td valign="middle" style="padding:0 10px 0 20px; text-decoration: none; font-size: 36px; font-weight: bold; color: navy; font-family: Verdana, Arial, sans-serif;">The GISt</td>
+                          <td valign="middle" style="padding:0 10px 4px 20px; text-decoration: none; font-size: 36px; font-weight: bold; color: #004b84; font-family: Verdana, Arial, sans-serif;">The GISt</td>
                         </tr>
 												<tr>
-													<td width="100%" align="left" style="font-size: 11px; color: navy; line-height: 24px; padding: 10px 10px 0 28px; font-family: Verdana, Arial, sans-serif;">Essential geospatial news from around the globe</td>
+													<td width="100%" align="left" style="font-size: 11px; color: #004b84; line-height: 24px; padding: 0 10px 0 28px; font-family: Verdana, Arial, sans-serif;">Essential geospatial news from around the globe</td>
                         </tr>
                       </table>
                     </td>
@@ -75,7 +75,7 @@
 					<table width="543"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin:0 auto;">
         		<tr>
           		<td style="font-size: 12px; font-family: Verdana, Arial, sans-serif; font-weight: normal; text-align: left; line-height: 18px; vertical-align: top; padding:12px 20px 10px 20px" bgcolor="#ffffff">
-								<span style="font-size: 24px; font-weight: bold; color: navy; line-height: 36px; font-family: Verdana, Arial, sans-serif;">Take in the View<br/></span>
+								<span style="font-size: 24px; font-weight: bold; color: #004b84; line-height: 36px; font-family: Verdana, Arial, sans-serif;">Take in the View<br/></span>
 								The Amazon River stretching over 6,400 kilometers through the largest swath of rainforest in the world (equivalent distance from New York to Rome).<br/>
 								<a href="#" style="text-decoration: none; font-size: 9px; line-height: 20px; font-family: Verdana, Arial, sans-serif;">See something link ></a><br/>
 								<hr style="margin: 16px 0 6px 0; border-color: navy;">
@@ -87,7 +87,7 @@
 					<!-- first section header -->
 					<table width="543"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin:0 auto;">
 					  <tr>
-					    <td width="100%" align="left" style="font-size: 20px; font-weight: bold; color: lightblue; line-height: 24px; padding: 0 20px 10px 20px; font-family: Verdana, Arial, sans-serif;">Observations<br/></td>
+					    <td width="100%" align="left" style="font-size: 20px; font-weight: bold; color: #00adef; line-height: 24px; padding: 0 20px 10px 20px; font-family: Verdana, Arial, sans-serif;">Observations<br/></td>
 						</tr>
 					</table>
 					<!-- end first section header -->
@@ -176,7 +176,7 @@
 					<!-- second section header -->
 					<table width="543"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#ffffff" style="margin:0 auto;">
 					  <tr>
-					    <td width="100%" align="left" style="font-size: 20px; font-weight: bold; color: green; line-height: 24px; padding: 0 20px 10px 20px; font-family: Verdana, Arial, sans-serif;">Innovations<br/></td>
+					    <td width="100%" align="left" style="font-size: 20px; font-weight: bold; color: #91c73d; line-height: 24px; padding: 0 20px 10px 20px; font-family: Verdana, Arial, sans-serif;">Innovations<br/></td>
 						</tr>
 					</table>
 					<!-- end second section header -->
@@ -266,7 +266,7 @@
 						<table width="543"  class="deviceWidth" border="0" cellpadding="0" cellspacing="0" align="center" bgcolor="#eeeeed" style="margin:0 auto;">
 							<tr>
 								<td valign="middle" align="center" style="padding: 10px 0;" bgcolor="#eeeeed">
-									<p valign="middle" style="font-size: 12px; color: green; font-family: Verdana, Arial, sans-serif; vertical-align: middle;"><a href="#"><img src="images/share.png" alt="Share this" align="center" border="0" style="padding-right: 6px;"/></a>
+									<p valign="middle" style="font-size: 12px; color: #91c73d; font-family: Verdana, Arial, sans-serif; vertical-align: middle;"><a href="#"><img src="images/share.png" alt="Share this" align="center" border="0" style="padding-right: 6px;"/></a>
 											<span style="padding: 2px;">Share this email with a friend or colleague</span></p>
 								</td>
 							</tr>
